fix: card layout on smallest devices

--- a/style.scss
+++ b/style.scss
@@ -411,4 +411,17 @@ h6 {
             font-size: 2em;
         }
     }
+
+    .card {
+        padding: 1.5em 1em;
+
+        &__price-number {
+            font-size: 33px;
+        }
+
+        &__button {
+            padding: 0.6em 1em;
+            width: 8em;
+        }
+    }
 }
